fix testDontHideFloatingAndWindowedToolWindows
GitOrigin-RevId: 950c937db337da13a797648c0a5358bac283cfa6